--- a/site/index.html
+++ b/site/index.html
@@ -219,6 +219,86 @@
       <dl>
         
 <dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+<p></p>
+</dd>
+
+<dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
 </dt>
@@ -356,12 +436,51 @@ both understanding how things work and to use to copy into other code</p>
 </dd>
 
 <dt>
-<h4>Links Page &lt;- You Are Here</h4>
+<h4>Links Page</h4>
 <div class="url_display">links.alanwsmith.com</div>
 </dt>
 <dd>
 <p>Pointers to my tools, projects, and playgrounds and a pitch for making
 sub-domain digital gardens. But you already know that since you're looking at the page :-)</p>
+</dd>
+
+<dt>
+<h4><a href="https://letters.alanwsmith.com/">The Alphabet Site</a></h4>
+<div class="url_display"><a href="https://letters.alanwsmith.com/">letters.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>You're number one source for links to my letters of the alphabet
+sites. I made them as part of my &quot;<a
+            href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
+            >How To Grow Your Digital Garden With Sub-Domains</a
+          >&quot; post. (Here's direct letter access if you're looking for that:
+
+          <a href="https://a.alanwsmith.com/">a</a>,
+          <a href="https://b.alanwsmith.com/">b</a>,
+          <a href="https://c.alanwsmith.com/">c</a>,
+          <a href="https://d.alanwsmith.com/">d</a>,
+          <a href="https://e.alanwsmith.com/">e</a>,
+          <a href="https://f.alanwsmith.com/">f</a>,
+          <a href="https://g.alanwsmith.com/">g</a>,
+          <a href="https://h.alanwsmith.com/">h</a>,
+          <a href="https://i.alanwsmith.com/">i</a>,
+          <a href="https://j.alanwsmith.com/">j</a>,
+          <a href="https://k.alanwsmith.com/">k</a>,
+          <a href="https://l.alanwsmith.com/">l</a>,
+          <a href="https://m.alanwsmith.com/">m</a>,
+          <a href="https://n.alanwsmith.com/">n</a>,
+          <a href="https://o.alanwsmith.com/">o</a>,
+          <a href="https://p.alanwsmith.com/">p</a>,
+          <a href="https://q.alanwsmith.com/">q</a>,
+          <a href="https://r.alanwsmith.com/">r</a>,
+          <a href="https://s.alanwsmith.com/">s</a>,
+          <a href="https://t.alanwsmith.com/">t</a>,
+          <a href="https://u.alanwsmith.com/">u</a>,
+          <a href="https://v.alanwsmith.com/">v</a>,
+          <a href="https://w.alanwsmith.com/">w</a>,
+          <a href="https://x.alanwsmith.com/">x</a>,
+          <a href="https://y.alanwsmith.com/">y</a>,
+          <a href="https://z.alanwsmith.com/">z</a>. )</p>
 </dd>
 
 <dt>
@@ -388,6 +507,8 @@ sub-domain digital gardens. But you already know that since you're looking at th
 <p>A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a></p>
 </dd>
 
+
+        <hr />
 
         <dt>
           <a href="https://letters.alanwsmith.com/">letters.alanwsmith.com</a>
