--- a/site/index.html
+++ b/site/index.html
@@ -190,7 +190,7 @@
   </head>
   <body>
     <header>
-      <h1>links.alanwsmith.com</h1>
+      <h1>The Links Of Alan</h1>
     </header>
     <main>
       <h3>First things first</h3>
@@ -218,86 +218,6 @@
 
       <dl>
         
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-<p></p>
-</dd>
-
 <dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
@@ -411,6 +331,19 @@
 </dd>
 
 <dt>
+<h4><a href="https://pixel-art.alanwsmith.com/">HTML Only Pixel Art</a></h4>
+<div class="url_display"><a href="https://pixel-art.alanwsmith.com/">pixel-art.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>This is an experiment to make pixel art using only an HTML table. It's
+one of six using no JavaScript, CSS, or images. Just the HTML. It was
+inspired by
+<a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
+>this tweet from whitep4nth3r</a
+></p>
+</dd>
+
+<dt>
 <h4><a href="https://html-random-pattern.alanwsmith.com/">HTML Only Random Pattern</a></h4>
 <div class="url_display"><a href="https://html-random-pattern.alanwsmith.com/">html-random-pattern.alanwsmith.com</a></div>
 </dt>
@@ -419,7 +352,7 @@
 </dd>
 
 <dt>
-<h4><a href="https://ideas.alanwsmith.com/">Ideas!</a></h4>
+<h4><a href="https://ideas.alanwsmith.com/">Ideas, Ideas, Ideas!</a></h4>
 <div class="url_display"><a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -436,16 +369,7 @@ both understanding how things work and to use to copy into other code</p>
 </dd>
 
 <dt>
-<h4>Links Page</h4>
-<div class="url_display">links.alanwsmith.com</div>
-</dt>
-<dd>
-<p>Pointers to my tools, projects, and playgrounds and a pitch for making
-sub-domain digital gardens. But you already know that since you're looking at the page :-)</p>
-</dd>
-
-<dt>
-<h4><a href="https://letters.alanwsmith.com/">The Alphabet Site</a></h4>
+<h4><a href="https://letters.alanwsmith.com/">Letters, Letters, Letters!</a></h4>
 <div class="url_display"><a href="https://letters.alanwsmith.com/">letters.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -484,11 +408,137 @@ sites. I made them as part of my &quot;<a
 </dd>
 
 <dt>
+<h4>Links Page &lt- You Are Here</h4>
+<div class="url_display">links.alanwsmith.com</div>
+</dt>
+<dd>
+<p>Pointers to my tools, projects, and playgrounds and a pitch for making
+sub-domain digital gardens. But you already know that since you're looking at the page :-)</p>
+</dd>
+
+<dt>
+<h4><a href="http://manic-scroll.alanwsmith.com/">Manic Scroll</a></h4>
+<div class="url_display"><a href="http://manic-scroll.alanwsmith.com/">manic-scroll.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A sample of the notes that I took during a manic bipolar episode.
+There&apos;s nothing particularly profound about them. Just thought it
+might be interesting to post them</p>
+</dd>
+
+<dt>
+<h4><a href="http://markdowntable.com/">Markdown Table Makder</a></h4>
+<div class="url_display"><a href="http://markdowntable.com/">markdowntable.com</a></div>
+</dt>
+<dd>
+<p>A super basic table formatter for markdown. Eventually, I'll make it
+live update and add more features, but it's handy as it is. (Though, I
+really need to add dark mode)</p>
+</dd>
+
+<dt>
+<h4><a href="http://millionportraitproject.com/">The Million Portrait Project</a></h4>
+<div class="url_display"><a href="http://millionportraitproject.com/">MillionPortraitProject.com</a></div>
+</dt>
+<dd>
+<p>It's been on hiatus, and doesn't have a lot there yet, but this is my
+long term photography project. (Fair warning that the site isn't
+          responsive. I didn't know how to do that when I made it)</p>
+</dd>
+
+<dt>
+<h4><a href="https://minecraft.alanwsmith.com/">Minecraft Notes</a></h4>
+<div class="url_display"><a href="https://minecraft.alanwsmith.com/">minecraft.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My basic collection of minecraft notes so I don't have to look them up
+every time. Another plain HTML file site that I'll be adding some
+    style too</p>
+</dd>
+
+<dt>
+<h4><strike>MonoCrack</strike></h4>
+<div class="url_display"><strike>monocrack.alanwsmith.com</strike></div>
+</dt>
+<dd>
+<p>A little game where you decrypt texts (Currently Offline)</p>
+</dd>
+
+<dt>
 <h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
 <div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>I&apos;m always on the look out for band names. I&apos;ve started collecting them here</p>
+</dd>
+
+<dt>
+<h4><a href="https://nextjs-playground.alanwsmith.com/">Next.js Playgroud</a></h4>
+<div class="url_display"><a href="https://nextjs-playground.alanwsmith.com/">nextjs-playground.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My place to mess around with NextJs to figure out how it works - TODO: Move to Next.js Cookbook</p>
+</dd>
+
+<dt>
+<h4><a href="https://ngrok-qr.alanwsmith.com/">ngrok Quick QR Code</a></h4>
+<div class="url_display"><a href="https://ngrok-qr.alanwsmith.com/">ngrok-qr.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A quick place to send ngrok urls to your phone via qr codes</p>
+</dd>
+
+<dt>
+<h4><a href="https://photos.alanwsmith.com/">photos.alanwsmith.com</a></h4>
+<div class="url_display"><a href="https://photos.alanwsmith.com/">photos.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Photography used to be my thing. It's what I was known for long before
+I got into code. During the years of getting my ass kicked by mental
+health issues, it left me. It was gone so long I'&apos;d gotten used
+to the idea that it was gone forever. Now, it&apos;s back. This is
+where I&apos;m posting my stuff</p>
+</dd>
+
+<dt>
+<h4><a href="https://podcast.alanwsmith.com/">The Pod Of Alan Podcast</a></h4>
+<div class="url_display"><a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Home of The Pod Of Alan where I riff on working in public, making
+stuff, creativity, art, design, education, learning, language, mental
+health, movies, and music</p>
+</dd>
+
+<dt>
+<h4><a href="https://qrclock.alanwsmith.com/">QR Code Clock</a></h4>
+<div class="url_display"><a href="https://qrclock.alanwsmith.com/">qrclock.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I wanted to see what would happen if you encoded time into a QR code.
+This is it</p>
+</dd>
+
+<dt>
+<h4><a href="https://reader.alanwsmith.com/">Reader For Docs</a></h4>
+<div class="url_display"><a href="https://reader.alanwsmith.com/">https://reader.alanwsmith.com/</a></div>
+</dt>
+<dd>
+<p>The idea behind this one is to make it easier for me to read
+documentation. Or, really, to keep my place when I'm reading through
+docs. Right now it's just the Org-mode manual split into individual
+pages. The key is that it remembers what page I'm on so I just open
+the site and pick up where I left off.</p>
+</dd>
+
+<dt>
+<h4><a href="https://rtr.alanwsmith.com/">Roll. Tide. Roll.</a></h4>
+<div class="url_display"><a href="https://rtr.alanwsmith.com/">rtr.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Gotta have a Roll Tide site. On the TODO list is to figure out the
+code that keeps all the words in view while filling the page as much
+as possible</p>
 </dd>
 
 <dt>
@@ -500,6 +550,64 @@ sites. I made them as part of my &quot;<a
 </dd>
 
 <dt>
+<h4><a href="https://slides.alanwsmith.com/">The Slides Of Alan</a></h4>
+<div class="url_display"><a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Gonna start putting slide decks here for talks and videos</p>
+</dd>
+
+<dt>
+<h4><a href="https://static-template.alanwsmith.com/">Static HTML Site Template</a></h4>
+<div class="url_display"><a href="https://static-template.alanwsmith.com/">static-template.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My basic template for starting sites without frameworks. Has sample
+favicons and Open Graph image calls and will eventually have CSS and
+JS samples</p>
+</dd>
+
+<dt>
+<h4><a href="https://www.surftech.tv/">SurfTech.tv</a></h4>
+<div class="url_display"><a href="https://www.surftech.tv/">surftech.tv</a></div>
+</dt>
+<dd>
+<p>This is a little project I built for myself so that when I've got a
+some time to watch a tech video during lunch I don't have to worry
+about finding one. This just plays a random one for me. Still have a
+bunch of features to add to this, but the basic functionality is nice</p>
+</dd>
+
+<dt>
+<h4><a href="https://tailwind-playground.alanwsmith.com/">Tailwind Playground</a></h4>
+<div class="url_display"><a href="https://tailwind-playground.alanwsmith.com/">tailwind-playground.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Messing around with TailwindCSS to figure out how things work</p>
+</dd>
+
+<dt>
+<h4><a href="https://tutorial-thoughts.alanwsmith.com/">Tutorial Thoughts</a></h4>
+<div class="url_display"><a href="https://tutorial-thoughts.alanwsmith.com/">tutorial-thoughts.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I find most coding tutorials frustrating. This is my place to
+experiment with layouts, designs, and concepts that work with the way
+my brain works</p>
+</dd>
+
+<dt>
+<h4><a href="https://yabai.alanwsmith.com/">Yabai Automation</a></h4>
+<div class="url_display"><a href="https://yabai.alanwsmith.com/">yabai.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I use <a href="https://github.com/koekeishiya/yabai">Yabai</a> as a
+tiling window manager on my mac. This page has some scripts I use to
+automatically move windows around based on which monitors I have
+connected and what I'm doing</p>
+</dd>
+
+<dt>
 <h4><a href="https://dpr.alanwsmith.com/">Your Device Pixel Ratio</a></h4>
 <div class="url_display"><a href="https://dpr.alanwsmith.com/">dpr.alanwsmith.com</a></div>
 </dt>
@@ -508,217 +616,6 @@ sites. I made them as part of my &quot;<a
 </dd>
 
 
-        <hr />
-
-        <dt>
-          <a href="https://letters.alanwsmith.com/">letters.alanwsmith.com</a>
-        </dt>
-        <dd>
-          You're number one source for links to my letters of the alphabet
-          sites. I made them as part of my &quot;<a
-            href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
-            >How To Grow Your Digital Garden With Sub-Domains</a
-          >&quot; post. (Here's direct letter access if you're looking for that:
-
-          <a href="https://a.alanwsmith.com/">a</a>,
-          <a href="https://b.alanwsmith.com/">b</a>,
-          <a href="https://c.alanwsmith.com/">c</a>,
-          <a href="https://d.alanwsmith.com/">d</a>,
-          <a href="https://e.alanwsmith.com/">e</a>,
-          <a href="https://f.alanwsmith.com/">f</a>,
-          <a href="https://g.alanwsmith.com/">g</a>,
-          <a href="https://h.alanwsmith.com/">h</a>,
-          <a href="https://i.alanwsmith.com/">i</a>,
-          <a href="https://j.alanwsmith.com/">j</a>,
-          <a href="https://k.alanwsmith.com/">k</a>,
-          <a href="https://l.alanwsmith.com/">l</a>,
-          <a href="https://m.alanwsmith.com/">m</a>,
-          <a href="https://n.alanwsmith.com/">n</a>,
-          <a href="https://o.alanwsmith.com/">o</a>,
-          <a href="https://p.alanwsmith.com/">p</a>,
-          <a href="https://q.alanwsmith.com/">q</a>,
-          <a href="https://r.alanwsmith.com/">r</a>,
-          <a href="https://s.alanwsmith.com/">s</a>,
-          <a href="https://t.alanwsmith.com/">t</a>,
-          <a href="https://u.alanwsmith.com/">u</a>,
-          <a href="https://v.alanwsmith.com/">v</a>,
-          <a href="https://w.alanwsmith.com/">w</a>,
-          <a href="https://x.alanwsmith.com/">x</a>,
-          <a href="https://y.alanwsmith.com/">y</a>,
-          <a href="https://z.alanwsmith.com/">z</a>. )
-        </dd>
-
-        <dt>
-          <a href="http://manic-scroll.alanwsmith.com/"
-            >manic-scroll.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          A sample of the notes that I took during a manic bipolar episode.
-          There&apos;s nothing particularly profound about them. Just thought it
-          might be interesting to post them
-        </dd>
-
-        <dt>
-          <a href="http://markdowntable.com/">markdowntable.com</a>
-        </dt>
-        <dd>
-          A super basic table formatter for markdown. Eventually, I'll make it
-          live update and add more features, but it's handy as it is. (Though, I
-          really need to add dark mode)
-        </dd>
-
-        <dt>
-          <a href="http://millionportraitproject.com/"
-            >The Million Portrait Project</a
-          >
-        </dt>
-        <dd>
-          It's been on hiatus, and doesn't have a lot there yet, but this is my
-          long term photography project. (Fair warning that the site isn't
-          responsive. I didn't know how to do that when I made it)
-        </dd>
-
-        <dt>
-          <a href="https://minecraft.alanwsmith.com/"
-            >minecraft.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          My basic collection of minecraft notes so I don't have to look them up
-          every time. Another plain HTML file site that I'll be adding some
-          style too
-        </dd>
-
-        <dt>
-          <strike>monocrack.alanwsmith.com</strike>
-        </dt>
-        <dd>Currently Offline - A little game where you decrypt texts</dd>
-
-        <dt>
-          <a href="https://nextjs-playground.alanwsmith.com/"
-            >nextjs-playground.alanwsmith.com</a
-          >
-        </dt>
-        <dd>My place to mess around with NextJs to figure out how it works</dd>
-
-        <dt>
-          <a href="https://ngrok-qr.alanwsmith.com/">ngrok-qr.alanwsmith.com</a>
-        </dt>
-        <dd>A quick place to send ngrok urls to your phone via qr codes</dd>
-
-        <dt>
-          <a href="https://photos.alanwsmith.com/">photos.alanwsmith.com</a>
-        </dt>
-        <dd>
-          Photography used to be my thing. It's what I was known for long before
-          I got into code. During the years of getting my ass kicked by mental
-          health issues, it left me. It was gone so long I'&apos;d gotten used
-          to the idea that it was gone forever. Now, it&apos;s back. This is
-          where I&apos;m posting my stuff
-        </dd>
-
-        <dt>
-          <a href="https://pixel-art.alanwsmith.com"
-            >pixel-art.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          This is an experiment to make pixel art using only an HTML table. It's
-          one of six using no JavaScript, CSS, or images. Just the HTML. It was
-          inspired by
-          <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
-            >this tweet from whitep4nth3r</a
-          >
-        </dd>
-
-        <dt>
-          <a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a>
-        </dt>
-        <dd>
-          Home of The Pod Of Alan where I riff on working in public, making
-          stuff, creativity, art, design, education, learning, language, mental
-          health, movies, and music
-        </dd>
-
-        <dt>
-          <a href="https://qrclock.alanwsmith.com/">qrclock.alanwsmith.com</a>
-        </dt>
-        <dd>
-          I wanted to see what would happen if you encoded time into a QR code.
-          This is it
-        </dd>
-
-        <dt>
-          <a href="https://reader.alanwsmith.com/">reader.alanwsmith.com</a>
-        </dt>
-        <dd>
-          The idea behind this one is to make it easier for me to read
-          documentation. Or, really, to keep my place when I'm reading through
-          docs. Right now it's just the Org-mode manual split into individual
-          pages. The key is that it remembers what page I'm on so I just open
-          the site and pick up where I left off.
-        </dd>
-
-        <dt>
-          <a href="https://rtr.alanwsmith.com/">rtr.alanwsmith.com</a>
-        </dt>
-        <dd>
-          Gotta have a Roll Tide site. On the TODO list is to figure out the
-          code that keeps all the words in view while filling the page as much
-          as possible
-        </dd>
-
-        <dt>
-          <a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a>
-        </dt>
-        <dd>Gonna start putting slide decks here for talks and videos</dd>
-
-        <dt>
-          <a href="https://static-template.alanwsmith.com/"
-            >static-template.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          My basic template for starting sites without frameworks. Has sample
-          favicons and Open Graph image calls and will eventually have CSS and
-          JS samples
-        </dd>
-
-        <dt><a href="https://www.surftech.tv/">SurfTech.tv</a></dt>
-        <dd>
-          This is a little project I built for myself so that when I've got a
-          some time to watch a tech video during lunch I don't have to worry
-          about finding one. This just plays a random one for me. Still have a
-          bunch of features to add to this, but the basic functionality is nice
-        </dd>
-
-        <dt>
-          <a href="https://tailwind-playground.alanwsmith.com/"
-            >tailwind-playground.alanwsmith.com</a
-          >
-        </dt>
-        <dd>Messing around with TailwindCSS to figure out how things work</dd>
-
-        <dt>
-          <a href="https://tutorial-thoughts.alanwsmith.com/"
-            >tutorial-thoughts.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          I find most coding tutorials frustrating. This is my place to
-          experiment with layouts, designs, and concepts that work with the way
-          my brain works
-        </dd>
-        <dt>
-          <a href="https://yabai.alanwsmith.com/">yabai.alanwsmith.com</a>
-        </dt>
-        <dd>
-          I use <a href="https://github.com/koekeishiya/yabai">Yabai</a> as a
-          tiling window manager on my mac. This page has some scripts I use to
-          automatically move windows around based on which monitors I have
-          connected and what I'm doing
-        </dd>
       </dl>
     </main>
     <footer>
