--- a/site/index.html
+++ b/site/index.html
@@ -437,16 +437,6 @@ really need to add dark mode)</p>
 </dd>
 
 <dt>
-<h4><a href="http://millionportraitproject.com/">The Million Portrait Project</a></h4>
-<div class="url_display"><a href="http://millionportraitproject.com/">MillionPortraitProject.com</a></div>
-</dt>
-<dd>
-<p>It's been on hiatus, and doesn't have a lot there yet, but this is my
-long term photography project. (Fair warning that the site isn't
-          responsive. I didn't know how to do that when I made it)</p>
-</dd>
-
-<dt>
 <h4><a href="https://minecraft.alanwsmith.com/">Minecraft Notes</a></h4>
 <div class="url_display"><a href="https://minecraft.alanwsmith.com/">minecraft.alanwsmith.com</a></div>
 </dt>
@@ -462,14 +452,6 @@ every time. Another plain HTML file site that I'll be adding some
 </dt>
 <dd>
 <p>A little game where you decrypt texts (Currently Offline)</p>
-</dd>
-
-<dt>
-<h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
-<div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>I&apos;m always on the look out for band names. I&apos;ve started collecting them here</p>
 </dd>
 
 <dt>
@@ -498,16 +480,6 @@ I got into code. During the years of getting my ass kicked by mental
 health issues, it left me. It was gone so long I'&apos;d gotten used
 to the idea that it was gone forever. Now, it&apos;s back. This is
 where I&apos;m posting my stuff</p>
-</dd>
-
-<dt>
-<h4><a href="https://podcast.alanwsmith.com/">The Pod Of Alan Podcast</a></h4>
-<div class="url_display"><a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>Home of The Pod Of Alan where I riff on working in public, making
-stuff, creativity, art, design, education, learning, language, mental
-health, movies, and music</p>
 </dd>
 
 <dt>
@@ -542,22 +514,6 @@ as possible</p>
 </dd>
 
 <dt>
-<h4><a href="https://jacktorrance.blog/">The Shiny Blog Of Jack Torrance</a></h4>
-<div class="url_display"><a href="https://jacktorrance.blog/">jacktorrance.blog</a></div>
-</dt>
-<dd>
-<p>An homage to The Shining. It's also what I had my site doing <a href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/">way back in 2001</a></p>
-</dd>
-
-<dt>
-<h4><a href="https://slides.alanwsmith.com/">The Slides Of Alan</a></h4>
-<div class="url_display"><a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>Gonna start putting slide decks here for talks and videos</p>
-</dd>
-
-<dt>
 <h4><a href="https://static-template.alanwsmith.com/">Static HTML Site Template</a></h4>
 <div class="url_display"><a href="https://static-template.alanwsmith.com/">static-template.alanwsmith.com</a></div>
 </dt>
@@ -584,6 +540,58 @@ bunch of features to add to this, but the basic functionality is nice</p>
 </dt>
 <dd>
 <p>Messing around with TailwindCSS to figure out how things work</p>
+</dd>
+
+<dt>
+<h4><a href="https://art.alanwsmith.com/">The Art Of Alan</a></h4>
+<div class="url_display"><a href="https://art.alanwsmith.com/">art.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Historically, I've been a photographer. These days, I'm getting into Processing and Blender. This is where I'm posting those pieces.</p>
+</dd>
+
+<dt>
+<h4><a href="http://millionportraitproject.com/">The Million Portrait Project</a></h4>
+<div class="url_display"><a href="http://millionportraitproject.com/">MillionPortraitProject.com</a></div>
+</dt>
+<dd>
+<p>It's been on hiatus, and doesn't have a lot there yet, but this is my
+long term photography project. (Fair warning that the site isn't
+          responsive. I didn't know how to do that when I made it)</p>
+</dd>
+
+<dt>
+<h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
+<div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I&apos;m always on the look out for band names. I&apos;ve started collecting them here</p>
+</dd>
+
+<dt>
+<h4><a href="https://podcast.alanwsmith.com/">The Pod Of Alan Podcast</a></h4>
+<div class="url_display"><a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Home of The Pod Of Alan where I riff on working in public, making
+stuff, creativity, art, design, education, learning, language, mental
+health, movies, and music</p>
+</dd>
+
+<dt>
+<h4><a href="https://jacktorrance.blog/">The Shiny Blog Of Jack Torrance</a></h4>
+<div class="url_display"><a href="https://jacktorrance.blog/">jacktorrance.blog</a></div>
+</dt>
+<dd>
+<p>An homage to The Shining. It's also what I had my site doing <a href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/">way back in 2001</a></p>
+</dd>
+
+<dt>
+<h4><a href="https://slides.alanwsmith.com/">The Slides Of Alan</a></h4>
+<div class="url_display"><a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Gonna start putting slide decks here for talks and videos</p>
 </dd>
 
 <dt>
