Updated text added fonts and colors

--- a/site/index.html
+++ b/site/index.html
@@ -127,6 +127,7 @@
         padding-bottom: 1.2rem;
         margin: 0;
         padding-top: 8px;
+        border-bottom: 1px solid #d69f13;
       }
 
       h2 {
@@ -193,31 +194,35 @@
       <h1>The Links Of Alan</h1>
     </header>
     <main>
-      <h3>First things first</h3>
+      <p>Hi there! Welcome to my links page.</p>
       <p>
-        Welcome to my links page. You can find me on
-        <a href="https://www.alanwsmith.com">my main site</a>,
-        <a href="https://twitter.com/TheIdOfAlan">Twitter</a>,
-        <a href="https://www.twitch.tv/theidofalan">Twitch</a>, and the
-        occasional
-        <a href="https://podcast.alanwsmith.com/">podcast</a>
-      </p>
-      <p>
-        But, the real point of this page is to point you to the various
-        sub-domains that make up my Digital Garden. (This page originally
-        included my
+        This page origially included a piece called
         <a
           href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
           >How To Grow Your Digital Garden With Sub-Domains</a
-        >
-        piece. It's a good read if you want some inspiration to get started
-        setting up your own)
+        >. I liked having it here, but it's a few minute read. It felt like
+        folks wouldn't get past it to the actual links. So, off it went. I'm
+        still proud of it. If you're looking for encouragement and some
+        direction to getting moving with web dev it's worth a read.
       </p>
 
-      <h3>My Digital Garden</h3>
+      <p>
+        As for my links, my main site is at
+        <a href="https://www.alanwsmith.com">alanwsmith.com</a>. I'm on
+        <a href="https://twitter.com/TheIdOfAlan">Twitter</a>,
+        <a href="https://www.twitch.tv/theidofalan">Twitch</a>,
+        <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">Mastodon</a>
+        and the occasional
+        <a href="https://podcast.alanwsmith.com/">podcast</a>.
+      </p>
+
+      <p>
+        But, the real point of this page is to point you to the various
+        sub-domains that make up my Digital Garden. So, without further ado,
+        here's the places I put stuff on the web:
+      </p>
 
       <dl>
-        
 <dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
@@ -288,6 +293,14 @@
 </dt>
 <dd>
 <p>I finally got fed up with how difficult it is to figure out EC2 pricing so I put this together. (The specific goal at the time was to price out the different GPU instances to look at blender rendering.)</p>
+</dd>
+
+<dt>
+<h4><a href="https://art.alanwsmith.com/">Fonts and Colors</a></h4>
+<div class="url_display"><a href="https://art.alanwsmith.com/">art.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I'm not good at color swabs or fonts in issolation. I built this so I don't have to be. Changes show up directly on an moke page.</p>
 </dd>
 
 <dt>
@@ -622,16 +635,16 @@ connected and what I'm doing</p>
 <dd>
 <p>A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a></p>
 </dd>
-
-
-      </dl>
+</dl>
     </main>
     <footer>
       ~<br />
       made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a><br />
       who has a <a href="https://www.alanwsmith.com/">website</a> and a
       <a href="https://podcast.alanwsmith.com/">podcast</a> <br />and some other
-      stuff<br />but you already know about that since you're here
+      stuff<br />but you already know about that since you're here <br />and now
+      with more
+      <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>!
     </footer>
   </body>
 </html>
