Fixed spelling errors

--- a/scripts/page_builder/template.html
+++ b/scripts/page_builder/template.html
@@ -196,7 +196,7 @@
     <main>
       <p>Hi there! Welcome to my links page.</p>
       <p>
-        This page origially included a piece called
+        This page originally included a piece called
         <a
           href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
           >How To Grow Your Digital Garden With Sub-Domains</a
