--- a/site/index.html
+++ b/site/index.html
@@ -196,7 +196,7 @@
     <main>
       <p>Hi there! Welcome to my links page.</p>
       <p>
-        This page origially included a piece called
+        This page originally included a piece called
         <a
           href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
           >How To Grow Your Digital Garden With Sub-Domains</a
@@ -256,6 +256,14 @@
 </dd>
 
 <dt>
+<h4><a href="https://chess.alanwsmith.com/">Blender Chess Pieces</a></h4>
+<div class="url_display"><a href="https://chess.alanwsmith.com/">chess.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I started playing around with Blender to give me something to do that's not coding. Sure, it's still on a computer, but it kicks the visual part of my brain into gear which is a nice change of pace. </p>
+</dd>
+
+<dt>
 <h4><a href="https://bright-screen-flash-alert.alanwsmith.com/">Bright Screen Flash Alert</a></h4>
 <div class="url_display"><a href="https://bright-screen-flash-alert.alanwsmith.com/">bright-screen-flash-alert.alanwsmith.com</a></div>
 </dt>
@@ -296,11 +304,11 @@
 </dd>
 
 <dt>
-<h4><a href="https://art.alanwsmith.com/">Fonts and Colors</a></h4>
-<div class="url_display"><a href="https://art.alanwsmith.com/">art.alanwsmith.com</a></div>
+<h4><a href="https://fonts-and-colors.alanwsmith.com/">Fonts and Colors</a></h4>
+<div class="url_display"><a href="https://fonts-and-colors.alanwsmith.com/">fonts-and-colors.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>I'm not good at color swabs or fonts in issolation. I built this so I don't have to be. Changes show up directly on an moke page.</p>
+<p>I'm not good at color swabs or fonts in isolation. I built this so I don't have to be. Changes show up directly on the page.</p>
 </dd>
 
 <dt>
@@ -468,7 +476,7 @@ every time. Another plain HTML file site that I'll be adding some
 </dd>
 
 <dt>
-<h4><a href="https://nextjs-playground.alanwsmith.com/">Next.js Playgroud</a></h4>
+<h4><a href="https://nextjs-playground.alanwsmith.com/">Next.js Playground</a></h4>
 <div class="url_display"><a href="https://nextjs-playground.alanwsmith.com/">nextjs-playground.alanwsmith.com</a></div>
 </dt>
 <dd>
